[gd_scene load_steps=16 format=3 uid="uid://bmfe8j4rq1x0y"]

[ext_resource type="Script" path="res://OverWorldCMDS/Main/SaveAndLoad/Load Game/LoadGame.gd" id="1_4bayj"]
[ext_resource type="Texture2D" uid="uid://c4504rpil7g7n" path="res://OverWorldCMDS/Main/free-sky-with-clouds-background-pixel-art-set/Clouds/Clouds 8/1.png" id="2_fnd63"]
[ext_resource type="PackedScene" uid="uid://bao0ve2pbflqc" path="res://OverWorldCMDS/Main/SaveAndLoad/Save/SaveContainer.tscn" id="2_q5n33"]
[ext_resource type="Texture2D" uid="uid://bnbrdtlwmqlg4" path="res://OverWorldCMDS/Main/free-sky-with-clouds-background-pixel-art-set/Clouds/Clouds 8/2.png" id="3_rece1"]
[ext_resource type="Texture2D" uid="uid://182t78q6s17e" path="res://OverWorldCMDS/Main/free-sky-with-clouds-background-pixel-art-set/Clouds/Clouds 8/3.png" id="4_cbra6"]
[ext_resource type="Texture2D" uid="uid://b6axnfv5jp271" path="res://OverWorldCMDS/Main/free-sky-with-clouds-background-pixel-art-set/Clouds/Clouds 8/4.png" id="5_86w84"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nhpk4"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4

[sub_resource type="Theme" id="Theme_vdivs"]
Label/styles/normal = SubResource("StyleBoxFlat_nhpk4")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m18jf"]
bg_color = Color(0.581495, 0.573062, 0.790994, 1)

[sub_resource type="Theme" id="Theme_xfii1"]
Label/styles/normal = SubResource("StyleBoxFlat_m18jf")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_thac6"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_48gr5"]
bg_color = Color(0.776598, 0.446143, 0.853875, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yxdyc"]
bg_color = Color(1, 1, 1, 0)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vshoo"]
bg_color = Color(0.776471, 0.447059, 0.854902, 1)

[sub_resource type="Theme" id="Theme_copr4"]
Button/styles/disabled = SubResource("StyleBoxFlat_thac6")
Button/styles/focus = SubResource("StyleBoxFlat_48gr5")
Button/styles/hover = SubResource("StyleBoxFlat_48gr5")
Button/styles/normal = SubResource("StyleBoxFlat_yxdyc")
Button/styles/pressed = SubResource("StyleBoxFlat_vshoo")

[node name="LoadGame" type="Control" node_paths=PackedStringArray("saves_list")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
script = ExtResource("1_4bayj")
saves_list = NodePath("VBoxContainer/HBoxContainer/VBoxContainer/load_container/Control/SaveList")

[node name="background" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_fnd63")
flip_v = true

[node name="TextureRect2" type="TextureRect" parent="background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_rece1")

[node name="TextureRect3" type="TextureRect" parent="background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_cbra6")

[node name="TextureRect4" type="TextureRect" parent="background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_86w84")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
offset_right = 1152.0
offset_bottom = 648.0
size_flags_vertical = 3

[node name="header" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 8.0

[node name="Control2" type="Control" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 8.0

[node name="Title" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
theme = SubResource("Theme_vdivs")
text = "Start Game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme = SubResource("Theme_xfii1")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Location" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 3.0
theme = SubResource("Theme_xfii1")
text = "Location"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Date" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 3.0
theme = SubResource("Theme_xfii1")
text = "Date:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Time" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 3.0
theme = SubResource("Theme_xfii1")
text = "Time:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="load_container" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 16.0

[node name="Control" type="Control" parent="VBoxContainer/HBoxContainer/VBoxContainer/load_container"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 8.0

[node name="SaveList" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer/load_container/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SaveContainer1" parent="VBoxContainer/HBoxContainer/VBoxContainer/load_container/Control/SaveList" instance=ExtResource("2_q5n33")]
layout_mode = 2

[node name="SaveContainer2" parent="VBoxContainer/HBoxContainer/VBoxContainer/load_container/Control/SaveList" instance=ExtResource("2_q5n33")]
layout_mode = 2

[node name="SaveContainer3" parent="VBoxContainer/HBoxContainer/VBoxContainer/load_container/Control/SaveList" instance=ExtResource("2_q5n33")]
layout_mode = 2

[node name="SaveContainer4" parent="VBoxContainer/HBoxContainer/VBoxContainer/load_container/Control/SaveList" instance=ExtResource("2_q5n33")]
layout_mode = 2

[node name="SaveContainer5" parent="VBoxContainer/HBoxContainer/VBoxContainer/load_container/Control/SaveList" instance=ExtResource("2_q5n33")]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer/load_container"]
layout_mode = 2
size_flags_vertical = 3

[node name="load_save" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer/load_container/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("Theme_copr4")
text = "Load save"

[node name="delete" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer/load_container/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("Theme_copr4")
text = "Delete save"

[node name="Control3" type="Control" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="footer" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/load_container/HBoxContainer/load_save" to="." method="_on_load_save_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/load_container/HBoxContainer/delete" to="." method="_on_delete_pressed"]
